# patchclamp

./: CMakeLists.txt  README.md
daqconfig/: IniFile.cpp  IniFile.h  daqconfig.pro  daqconfig.xpm  mainwindow.cpp  mainwindow.h  mainwindow.ui
patchclamp/: AxonABF2.cpp  AxonABF2.h  Description.ui  IniFile.cpp  IniFile.h  Interpolation.cpp  Interpolation.h  LongDisplay.cpp  LongDisplay.h  Oscilloscope.cpp  Oscilloscope.h  adcdacthread.cpp  adcdacthread.h  amplifier.cpp  amplifier.h  buffers.cpp  buffers.h  channel.cpp  channel.h  common.cpp  common.h  dlgdescriptionimpl.cpp  dlgdescriptionimpl.h  electrophysiology.cpp  electrophysiology.h  gauss.cpp  gauss.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  patchclamp.pro  patchclamp.pro.user.2.5pre1
